  otherwise, and fix a very minor memory leak on some occasions.
- Configury, OSS driver: Removed useless check for /dev/sndstat
  presence, added <soundcard.h> check to cover all our bases for
  less common setups.
- Configury, NAS driver: Use the configury detected X header and
  library locations when necessary, not just hardcoded /usr/X11R6/.
- Several configury and makefile clean-ups.


Summary of changes between libmikmod 3.3.4 and libmikmod 3.3.5:
========================================================================

libmikmod v3.3.5 was released on 10-Jan-2014.
This is a minor bugfix / maintenance release.

- New PulseAudio driver for audio output, using pa_simple_* api.
- Improved ALSA driver.
- mikmod.texi: Fixed document generation using newer texinfo.
- Updates and fixes to configury (autotools) and to cmake support.
  Cmake support covers more targets and options now.
- Made the aiff, wav and raw file writer drivers configurable: the
  library can be configured and compiled without any audio output
  drivers if so required, except for drv_nos ('nosound') of course.
- DOS (djgpp): fixed the sound blaster SB16 driver.
- Fixed a few potential sources of crash, several code clean-ups.
- Minor compilation fixes against ancient software versions.
- Merged an updated gp32 driver (it is still an untested driver...)


Summary of changes between libmikmod 3.3.3 and libmikmod 3.3.4:
========================================================================

libmikmod 3.3.4 was released on 08-Dec-2013.

- libmikmod.m4: fixed so that it works with C++ compilers.
- cmake: fixed a cpack version number issue.
- Fix CVE-2006-3879 (Secunia 21196) for Graoumf tracker (gt2) loader.
  (the loader is non-functional yet but the issue was there.)
- Fix memory leaks in the Graoumf tracker (gt2) loader.
- UMX loader: Support umx music files from Unreal 1997/98 beta version.
- S3M loader: Enforce the 64000 bytes sample length limit, which has